 -*- Mode: sh -*-
AC_INIT(Makeconf)
VERSION="`cat $srcdir/version`"
AC_SUBST(VERSION)
AC_DEFINE_UNQUOTED(VERSION,"$VERSION",version number)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_HOST()
AC_VALIDATE_CACHED_SYSTEM_TUPLE()

AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_AWK()
AC_PROG_CC()
AC_PROG_CXX()

case "$CC" in
    cl) export CFLAGS="$CFLAGS -Zi -nologo -G5 -W3 -GR -GX"
        export CXXFLAGS="$CXXFLAGS -Zi -nologo -G5 -W3 -GR -GX" ;;
    gcc) export CFLAGS="$CFLAGS -fexpensive-optimizations -O3"
         export CXXFLAGS="$CXXFLAGS -fexpensive-optimizations -O3" ;;
esac

AC_PROG_YACC()
M2_ENABLE_DUMPDATA()
AC_CHECK_FUNC(__finite,,AC_DEFINE(__finite,finite,whether __finite is missing))
AC_CHECK_FUNC(__isnan,,AC_DEFINE(__isnan,isnan,whether __isnan is missing))
AC_CHECK_FUNC(__isinf,,AC_DEFINE(__isinf,isinf,whether __isinf is missing))
M2_SHOW_CONFDEFS()
M2_IS_THERE(sys_errlist)
M2_IS_THERE(herror)
M2_IS_DECLARED(char **,sys_errlist)
M2_IS_DECLARED(char **,h_errlist)
AC_CONFIG_HEADER(include/config.h)
CONFIGURED_FILES="M2_CONFIGURED_FILES()"
AC_SUBST(CONFIGURED_FILES)
dnl AC_CONFIG_SUBDIRS(gmp factory libfac)
AC_OUTPUT(M2_CONFIGURED_FILES())
